manifest/objects/dfsle__RecipientStatus__c.object
<CustomObject>
    <description>DocuSign Recipient Status</description>
    <fields>
        <fullName>dfsle__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to connect recipient status record with source Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DocuSign Recipient Status</relationshipLabel>
        <relationshipName>DocuSign_Recipient_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dfsle__Completed__c</fullName>
        <label>Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dfsle__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to connect recipient status record with source Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DocuSign Recipient Status</relationshipLabel>
        <relationshipName>DocuSign_Recipient_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dfsle__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>dfsle__EnvelopeStatus__c</fullName>
        <label>DocuSign Envelope Status</label>
        <referenceTo>dfsle__EnvelopeStatus__c</referenceTo>
        <relationshipLabel>DocuSign Recipient Statuses</relationshipLabel>
        <relationshipName>Recipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dfsle__LastStatusUpdate__c</fullName>
        <label>Last Status Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dfsle__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to connect recipient status record with source Lead</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DocuSign Recipient Status</relationshipLabel>
        <relationshipName>DocuSign_Recipient_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dfsle__Reason__c</fullName>
        <label>Declined Reason</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__RoutingOrder__c</fullName>
        <label>Routing Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__Sent__c</fullName>
        <label>Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dfsle__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__SourceId__c</fullName>
        <label>Salesforce Source ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Status__c</fullName>
        <label>Status</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Type__c</fullName>
        <label>Type</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <label>Docusign Recipient Status</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Docusign Recipient Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>